--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 0.0.0+1
+version: 1.0.0+1
 
 environment:
   sdk: ">=3.1.3 <4.0.0"
@@ -11,8 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
+  bloc: ^8.1.2
   cupertino_icons: ^1.0.2
+  dio: ^5.3.3
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
